Agrega slides, practica y notebook de Clase 7 (Cuadrados Minimos)

--- a/Notebooks/clase6-ldd-regresionlineal.ipynb
+++ b/Notebooks/clase6-ldd-regresionlineal.ipynb
@@ -164,13 +164,13 @@
    "outputs": [],
    "source": [
     "modelo = linear_model.LinearRegression()    # Inicializamos un modelo de Regresion Lineal\n",
-    "modelo.fit(datos[['total_bill']], datos[['tip']])   # Realizamos el ajuste\n",
+    "modelo.fit(datos[['total_bill']], datos['tip'])   # Realizamos el ajuste\n",
     "beta_1 = modelo.coef_   # Con .coef_ recuperamos el valor de beta_1 (dentro de un array)\n",
     "beta_0 = modelo.intercept_   # Con .intercept_ recuperamos el valor de beta_0 (dentro de  un array)\n",
     "\n",
     "# Para obtener los valores de beta_1 y beta_0 como valores numericos\n",
-    "beta_1 = modelo.coef_[0][0]\n",
-    "beta_0 = modelo.intercept_[0]\n",
+    "beta_1 = modelo.coef_[0]\n",
+    "beta_0 = modelo.intercept_\n",
     "print('Beta_1: ', beta_1)\n",
     "print('Beta_0: ', beta_0)\n",
     "\n",
@@ -186,9 +186,9 @@
    "id": "bef42f66-a5c4-4e28-851a-a3ccd97104bf",
    "metadata": {},
    "source": [
-    "**MUY IMPORTANTE:** notar los corchetes extra de `datos[['metros_cuad']]` y `datos[['precio']]`. Los doble corchetes hacen que `datos[['precio']]` sea un pandas.Dataframe y no un pandas.Series.\n",
+    "**MUY IMPORTANTE:** notar los corchetes extra de `datos[['total_bill']]`. Los doble corchetes hacen que `datos[['total_bill']]` sea un pandas.Dataframe y no un pandas.Series.\n",
     "\n",
-    "<span style=\"color:red\">**EL MÉTODO .fit() ADMITE DATAFRAMES (O MATRICES), NO ADMITE SERIES (NI ARRAYS). USAR DOBLE CORCHETE.**</span>"
+    "<span style=\"color:red\">**EL MÉTODO .fit() ADMITE DATAFRAMES (O MATRICES) PARA `x`, NO ADMITE SERIES (NI ARRAYS). USAR DOBLE CORCHETE.**</span>"
    ]
   },
   {
@@ -311,24 +311,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1986a7c3-7394-4edb-83c8-4463ca374b81",
-   "metadata": {},
-   "source": [
-    "Para que nos devuelva un array de numpy en vez de una matriz, usamos el método `flatten()`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae3611c3-67ae-45ac-9621-08d1997deb5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modelo.predict(pd.DataFrame({'total_bill': [35, 60]})).flatten()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9bde8b56-865e-4ac3-820d-3b3c71ff82b2",
    "metadata": {},
    "source": [
@@ -342,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = modelo.predict(datos[['total_bill']]).flatten()\n",
+    "y_pred = modelo.predict(datos[['total_bill']])\n",
     "display(y_pred)"
    ]
   },
@@ -381,7 +363,7 @@
    "outputs": [],
    "source": [
     "y_pred = modelo.predict(datos[['total_bill']])\n",
-    "r2_score(datos[['tip']], y_pred)"
+    "r2_score(datos['tip'], y_pred)"
    ]
   },
   {
@@ -399,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean_squared_error(datos[['tip']], y_pred)"
+    "mean_squared_error(datos['tip'], y_pred)"
    ]
   }
  ],
