Corrige un error en la Practica 4

--- a/Practicas/practica4-ldd-1c2024.tex
+++ b/Practicas/practica4-ldd-1c2024.tex
@@ -206,7 +206,8 @@ def r_cuad(x, y, pendiente, o_origen):
 
     \item Supongamos que queremos poner a la venta un inmueble de $105$ m$^2$. Sólo con esa información y teniendo en cuenta los items anteriores, ¿cuál sería el precio de refencia para la venta? Si sabemos además que el inmueble está en la Zona 2, ¿cambiaría en algo el valor calculado anteriormente? 
 
-    \item Si me ofrecen un inmueble en la Zona 2 a un precio de 300, ¿qué tan barato o caro es respecto a su precio de referencia?
+    \item Si me ofrecen un inmueble de $100$ m$^2$ en la Zona 2 a un precio de 300, ¿qué tan barato o caro es respecto a
+     su precio de referencia?
 
     \item \textit{Efecto de los outliers.} En este item trabajaremos con los datos de \texttt{inmuebles\_outliers.csv}, que tiene los mismos datos que \texttt{inmuebles.csv}, salvo cuatro que son outliers.
     \begin{enumerate}
