--- a/Practicas/practica5-ldd-1c2024.tex
+++ b/Practicas/practica5-ldd-1c2024.tex
@@ -31,7 +31,7 @@
   keywordstyle=\color{blue},       % keyword style
   language=Python,                 % the language of the code
   morekeywords={*,...},            % if you want to add more keywords to the set
-  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
+  numbers=none,                    % where to put the line-numbers; possible values are (none, left, right)
   numbersep=5pt,                   % how far the line-numbers are from the code
   numberstyle=\tiny\color{mygray}, % the style that is used for the line-numbers
   rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
@@ -121,9 +121,9 @@
 
 \begin{enumerate}
 
-\item Queremos estudiar la relación entre la longitud de la aleta de un ping\"uino y el peso del ping\"uino. Como en una esfera, el peso es proporcional a la longitud del radio elevada al cubo, podemos conjeturar que un polinomio de grado 3 es apropiado para ajustar el peso en función de la longitud de la aleta. Queremos verificar si nuestra conjetura tiene sustento en los datos.
+\item \label{ejer:grado3} Queremos estudiar la relación entre la longitud de la aleta de un ping\"uino y el peso del ping\"uino. Como en una esfera, el peso es proporcional a la longitud del radio elevada al cubo, podemos conjeturar que un polinomio de grado 3 es apropiado para ajustar el peso en función de la longitud de la aleta. Queremos verificar si nuestra conjetura tiene sustento en los datos.
 \begin{enumerate}
-\item \textbf{Datos faltantes.} Ejecutar el siguiente c\'odigo y observar si hay filas con datos faltantes (NaN).
+\item \label{item:nan} \textbf{Datos faltantes.} Ejecutar el siguiente c\'odigo y observar si hay filas con datos faltantes (NaN).
 \begin{lstlisting}
 penguins = sns.load_dataset("penguins")
 penguins.head()
@@ -137,58 +137,61 @@ penguins.isnull().values.any()
 Para eliminar las filas con valores faltantes aplicamos al DataFrame el método \lstinline{dropna()}. Eliminar las filas con datos faltantes del DataFrame de ping\"uinos y verificar que el DataFrame resultante no contiene valores faltantes.
 
 \item Dividir el dataset resultante  en un grupo de entrenamiento y uno de test (80\% - 20\%).
-\item Crear y ajustar 3 modelos utilizando polinomios de grados 1, 2 y 3. 
+\item Crear y ajustar 3 modelos utilizando polinomios de grados 1, 2 y 3.
 \item Calcular para cada uno el error predicción en el grupo de entrenamiento y en el grupo de test.
-\item ¿Cuál modelo tiene el menor error de ajuste? ¿Cuál el menor error de predicción?
-\item En base a los resultados obtenidos, ¿cu\'al de los tres modelos considera que es el m\'as apropiado?
+\item ¿Cuál modelo tiene el menor error (ECM) en el ajuste? ¿Cuál el menor error (ECM) de predicción?
+\item En base a los resultados obtenidos, ¿cu\'al de los tres modelos utilizaría?
 \end{enumerate}
 
 \item En el archivo \lstinline{50_startups.csv} tenemos los siguientes datos de 50 compa\~n\'ias: gastos en investigación y desarrollo, gastos administrativos, gastos en marketing y ganancias. Queremos estimar las ganancias a partir de los gastos en las distintas áreas.
 \begin{enumerate}
 \item Leer el archivo, y realizar un gráfico de dispersión para cada par de variables. Se pueden generar todos los gráficos automáticamente con el \lstinline{pairplot}.
 \begin{lstlisting}
+startups = pd.read_csv(???)
 sns.pairplot(
-    data=vehicles, aspect = .8);
+    data=startups, aspect = .8)
 \end{lstlisting}
 
 En base a estos gr\'aficos, si quisiéramos predecir la ganancia mediante un modelo lineal utilizando una sola variable predictora, ¿cu\'al variable utilizar\'ia? Diseñar un experimento para verificar su respuesta.
-\item En este ejemplo, ¿considera que un modelo lineal multivariado ayudar\'ia a predecir mejor la ganancia? Realizar un experimento para verificar su respuesta.
+\item En este ejemplo, ¿considera que un modelo lineal multivariado ayudar\'ia a predecir mejor la ganancia que el modelo lineal univariado del ítem anterior? Realizar un experimento para verificar su respuesta.
 \end{enumerate}
 
-\item Se quiere predecir el peso de un ping\"uino usando como variables predictoras el largo de la aleta y el sexo del ping\"uino.
+\item En el \ref{ejer:grado3} no tuvimos en cuenta el sexo del ping\"uino para predecir el peso, y puede ser una variable importante. Se quiere predecir ahora el peso de un ping\"uino usando como variables predictoras el largo de la aleta y el sexo del ping\"uino (utilizar el DataFrame sin datos faltantes, como vimos en el \ref{ejer:grado3} \ref{item:nan}).
 \begin{enumerate}
-\item ¿Cu\'ales son todos los valores que toma la variable "sex"? ¿Qu\'e tipo de variable es: numérica o categórica, ordinal o nominal? ¿Es una variable binaria?
+\item ¿Cu\'ales son todos los valores que toma la variable ``sex''? ¿Qu\'e tipo de variable es: numérica o categórica, ordinal o nominal? ¿Es una variable binaria?
 
 \item Escribir (en lápiz y papel) la ecuación de un modelo lineal para este caso. ¿Qué unidades tienen las variables y cómo se codifica la variable “sexo del pinguino”?
 
-\item \textbf{Codificación de variables binarias} Para crear una columna con el sexo codificado como 0 y 1, utilizamos el siguiente c\'odigo:
+\item \textbf{Codificación de variables binarias.} Para crear una columna con el sexo codificado como 0 y 1, utilizamos el siguiente c\'odigo:
 \begin{lstlisting}
 from sklearn.preprocessing import OrdinalEncoder
 encoder = OrdinalEncoder()
 sex01 = encoder.fit_transform(penguins[["sex"]])
-penguines["sex01"] = sex01
+penguins["sex01"] = sex01
 \end{lstlisting}
 
-\item Ajustar el modelo usando todos los datos disponibles. Reportar los coeficientes encontrados y calcular el error de predicción (MSE).
+\item Ajustar el modelo usando todos los datos disponibles. Reportar los coeficientes encontrados y calcular el error de predicción (ECM). ?`Considera que agregar la variable ``sex'' mejoró el modelo?
 \item Hacer un gráfico de los datos junto con las predicciones del modelo.
 \item Dos ping\"uinos que tienen igual largo de aleta, uno macho y otro hembra, ¿qué diferencia de peso predice el modelo que tendrán?
 \end{enumerate}
 
-\item Ahora se quiere predecir el peso de un pinguino usando como variables predictoras el largo de la aleta y la especie del pinguino.
+\item Ahora se quiere predecir el peso de un pinguino usando como variables predictoras el largo de la aleta y la especie del ping\"uino.
 \begin{enumerate}
-\item Trabajamos con la base de ping\"uinos sin datos faltantes. ¿Cu\'ales son todos los valores que toma la variable "sex"? ¿Qu\'e tipo de variable es: numérica o categórica, ordinal o nominal? ¿Es una variable binaria?
+\item Trabajamos con la base de ping\"uinos sin datos faltantes. ¿Cu\'ales son todos los valores que toma la variable ``sex''? ¿Qu\'e tipo de variable es: numérica o categórica, ordinal o nominal? ¿Es una variable binaria?
 \item Escribir (en lápiz y papel) la ecuación de un modelo lineal para este caso. ¿Cómo se codifica la variable “especie”?
 \item Explicar qué diferencia tiene este modelo respecto al propuesto en el ejercicio 1.
-\item \textbf{Codificación de variables categóricas} Para agregar variables dummies para cada una de las especies usamos \lstinline{OneHotEncoder}. Correr el siguiente c\'odigo y verificar el resultado:
+\item \textbf{Codificación de variables categóricas.} Para agregar variables dummies para cada una de las especies usamos \lstinline{OneHotEncoder}. Correr el siguiente c\'odigo y verificar el resultado:
 \begin{lstlisting}
 from sklearn.preprocessing import OneHotEncoder
 penguins = sns.load_dataset("penguins").dropna()
 encoderOHE = OneHotEncoder(sparse_output = False)
 species3 = encoderOHE.fit_transform(penguins[["species"]])
-species3_df = pd.DataFrame(species3, columns=encoderOHE.get_feature_names_out())
+species3_df = pd.DataFrame(species3, columns=encoderOHE.get_feature_names_out(), index=penguins.index)
 penguins3 = pd.concat([penguins, species3_df], axis = 1)
 penguins3.head()
 \end{lstlisting}
+
+Verificar que los tama\~nos de \lstinline{species3} y \lstinline{penguins3} sean los esperados, y que el DataFrame resultante no tenga datos faltantes (como el DataFrame original no tiene faltantes, este tampoco debería tenerlos, pero nunca está mal verificarlo).
 
 \item Ajustar el modelo usando todos los datos disponibles. Reportar los coeficientes encontrados y calcular el error de predicción.
 \item Hacer un gráfico de los datos junto con las predicciones del modelo.
