Pulleo todos los cambios de ldd-docentes

--- a/Practicas/practica1-ldd-1c2024.tex
+++ b/Practicas/practica1-ldd-1c2024.tex
@@ -365,11 +365,10 @@ df.head()
 
 df.info()
 
-# Convertimos los datos a np.array
-datosNP = df.to_numpy()
-print(datosNP)
+# Convertimos la columna de casos nuevos a np.array
+casos_diarios = df.confirmados_Nuevos.values
 
-casos_diarios = datosNP[:,1]  # Nos quedamos con la segunda columna
+# Graficamos la serie de casos diarios
 plt.plot(casos_diarios)
 
 # Calculamos la cantidad de casos acumulados con la funcion cumsum
