--- a/Slides/clase09-entrenamiento-slides.tex
+++ b/Slides/clase09-entrenamiento-slides.tex
@@ -1,6 +1,8 @@
 \documentclass[aspectratio=169,12pt]{beamer}
 \usepackage[utf8]{inputenc}
-\usepackage[english]{babel}
+\usepackage[spanish, es-nodecimaldot]{babel}
+%\usepackage{icomma} % Use dot as decimal separator
+\usepackage{booktabs} % For better-looking tables
 \usepackage{wrapfig}
 %\usepackage{siunitx}
 
@@ -230,18 +232,17 @@ Primer Cuatrimestre 2024 \\ Turnos tarde y noche
 %------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Sistemas de ecuaciones lineales}
+\frametitle{Introducción: sistemas de ecuaciones lineales}
 
 Sabemos que un fonde de inversión invirtió en acciones de YPF, Santander y Nvidia (y solo en estas acciones) pero no sabemos cuántas acciones compró de cada una. ¿Cómo podemos averiguarlo? 
 
 \pause
 
-La única información que tenemos disponible es la valorización del fondo al final de cada día.
-
-\pause
-
-Podemos conseguir información del valor de cada acción al cierre de cada día. 
-
+Suponemos que tenemos disponible:
+\begin{itemize}
+\item La valorización del fondo al final de cada día.
+\item El valor la acción de cada empresa al cierre de cada día. 
+\end{itemize}
 
 \end{frame}
 
@@ -252,13 +253,22 @@ Podemos conseguir información del valor de cada acción al cierre de cada día.
 
 Ponemos toda la información en la siguiente tabla.
 
-total	YPF	Santander	Nvidia
-	170262.00	20935	20100	37100.0
-	169929.50	21030	20500	36255.0
-	171064.00	20770	21700	36000.0
-	169637.35	20950	21000	35645.5
-	164625.45	20750	20316	33878.5
-
+\begin{table}[h]
+    \centering
+    \begin{tabular}{|c|c|c|c|}
+        \hline
+        Total & YPF & Santander & Nvidia \\
+        \hline
+        170262.00 & 20935 & 20100 & 37100.0 \\
+        169929.50 & 21030 & 20500 & 36255.0 \\
+        171064.00 & 20770 & 21700 & 36000.0 \\
+        169637.35 & 20950 & 21000 & 35645.5 \\
+        164625.45 & 20750 & 20316 & 33878.5 \\
+        \hline
+    \end{tabular}
+    \caption{Valores diarios de acciones}
+    \label{tab:my_table}
+\end{table}
 
 \end{frame}
 
@@ -315,7 +325,7 @@ $$
 \begin{frame}
 \frametitle{Solución del sistema}
 
-Triangulando la matriz y despejando, obtnenemos los valores
+Triangulando la matriz y despejando, obtenemos los valores
 $$
 c_1 = 3.2, \quad \quad c_2 =  2.0, \quad \quad c_3 = 1.7.
 $$
@@ -388,14 +398,11 @@ Cambiamos los valores de Santander por los valores de Galicia:
 Resolvemos el sistema y obtenemos estos valores:
 $$c_1 = 6.69507872, \quad \quad c_2 = 1.16828332, \quad \quad c_3 = 0.17838362$$
 
-Los números se ven menos redondos, pero eso no alcanza para decidir cuál es el modelo correcto.
+Los números no se ven menos redondos, pero eso no alcanza para decidir cuál es el modelo correcto.
 
-Un sistema de 3 ecuaciones y 3 incógnitas en general siempre tiene solución.
+Un sistema de 3 ecuaciones y 3 incógnitas en general \textbf{siempre} tiene solución.
 
-\textbf{Sobreajuste (overfitting)} Cuando tenemos igual cantidad de parámetros que observaciones, siempre va a tener solución, pero no nos da ninguna información sobre si el modelo es correcto, no podemos usarlo para estimar otros valores.
-
-Vimos hasta ahora:
-
+\textbf{Sobreajuste (overfitting).} Cuando tenemos igual cantidad de parámetros que observaciones, el sistema (casi) siempre va a tener solución pero no nos da ninguna información sobre si el modelo es correcto, no podemos usarlo para estimar otros valores.
 
 \end{frame}
 
@@ -405,10 +412,10 @@ Vimos hasta ahora:
 \begin{frame}
 \frametitle{Selección de modelos}
 
-¿Qué estrategias se les ocurre para ver cuál modelo es mejor?
+¿Qué estrategias se les ocurren para ver cuál modelo es mejor? \pause
 
 \begin{enumerate}
-\item Verificar la fórmula en otros días.
+\item Verificar la fórmula en otros días. \pause
 \item Utilizar más días al plantear el sistema de ecuaciones.
 \end{enumerate}
 
@@ -500,8 +507,8 @@ El problema DIFICIL de minimizar los errores se transforma en el problema FÁCIL
 
 Tenemos dos modelos posibles y queremos elegir el más apropiado:
 \begin{align*}
-A) total &= c_1 \cdot YPF + c_2 \cdot Santander + c_3 Nvidia \\
-B) total &= c_1 \cdot YPF + c_2 \cdot Galicia + c_3 Nvidia
+A) total &= c_1 \cdot YPF + c_2 \cdot Santander + c_3 \cdot Nvidia \\
+B) total &= c_1 \cdot YPF + c_2 \cdot Galicia + c_3 \cdot Nvidia
 \end{align*}
 
 Seguimos los siguientes pasos:
@@ -515,6 +522,41 @@ Seguimos los siguientes pasos:
 \end{frame}
 
 %------------------------------------------------------------------
+
+\begin{frame}
+\frametitle{Modelo lineal multivariado}
+
+El caso recién visto fue un ejemplo de juguete, donde existe una relación lineal entre las variables que tenemos que estimar.
+
+En las aplicaciones reales, esa formula puede no existir (por ejemplo, si queremos estimar los gastos en tarjeta de crédito de una persona en función del sueldo y la cantidad de hijos), pero el modelo lineal puede darnos una buena estimación.
+
+En el modelo lineal suponemos que existe una relación del tipo
+$$ X c = y.$$
+
+Como esa relación en general no existe, buscamos un vector $c$ que haga que $X c$ se parezca lo más posible a $y$.
+
+\end{frame}
+
+%------------------------------------------------------------------
+
+\begin{frame}
+\frametitle{Ejercicio: modelos lineales}
+
+Dadas una variable a predecir $y$ y variables explicativas $x_1, x_2, \dots$, ¿cuáles de los siguientes modelos son lineales? ¿Cuál es la matriz $X$ en cada caso?
+
+\begin{enumerate}
+\item $y = c_0 + c_1 x_1 + c_2 x_2$
+\item $y = c_0 + c_1 x_1 + c_2 x_1^2$
+\item $y = c_0 + c_1 x_1 + x_1^{c_2}$
+\item $y = c_0 + c_1 x_1 + c_2 x_2 + c_3 x_1 x_2$
+\item $y = c_0 + c_1 \sin(x_1) + c_2 \sin(x_2)$
+\item $y = c_0 + c_1 \sin(c_2 + x_1)$
+\item $y = c_0 + c_1 e^{x_1}$
+\item $y = c_0 \cdot c_1 ^{x_1}$
+\end{enumerate}
+
+\end{frame}
+ %------------------------------------------------------------------
 
 \begin{frame}
 \frametitle{Ejemplo real: cálculo de calorías}
